integrated user sign up on front end and back end, also fixed jwt token being attached when no token has been issued